*
* 0.1.10
*

- Added centralized agent upgrade
- New parameters added to Solaris subagent


*
* 0.1.9
*

- Added support for server modules
- Initial version of web interface created (for Microsoft IIS)
- Microsoft SQL driver improved
- Added file upload to agents (as preparation for centralized agent update)
- Client library redesigned to support multiple connections within
  one process
- Windows console: added automatic refresh in graphs
- Very basic Solaris subagent added


*
* 0.1.8
*

- Added support for System.CPU.Count and System.ProcessList parameters
  under Windows
- Created our own SNMP library (currently SNMP versions 1 and 2c are
  supported). Server is no longer needs net-snmp library. 
- Component locks moved to RAM from SQL database
- Added support for SNMP traps
- Removed access right "View server configuration" as unneeded
- Windows console: Added sorting to event selection dialog
- Windows console: Objects in object browser are now sorted with respect
  to IP addresses when object name is an IP address
- Windows console: Fixed bug with MDI window position restoration when
  window is maximized
- Windows console: Fixed bug with duplication of child window title in
  parent's title when child is maximized
- Windows console: Status icons now placed over object icons in
  object browser
- Windows console: Policy editor drawing code improved
- Added StartupDelay parameter to agent's configuration file
- Windows console: Added "Save policy" function to policy editor
- Fixed deadlock in Queue::GetOrBlock() which sometimes cause communication
  failures between client and server
- Server now can detect that SNMP variable is not supported by agent and
  change DCI status to "Not supported" accordingly
- Added interface status polling via SNMP
- Agent: Fixed bug in interface operational status detection under Windows
- Added server version checking in client connection procedure. If versions
  mismatch, client will not connect to server.