@@ -2,7 +2,7 @@
 
 [General Info]
 Version=1
-LastClass=CPackageMgr
+LastClass=CUserPropDlg
 LastTemplate=CMDIChildWnd
 NewFileInclude1=#include "stdafx.h"
 NewFileInclude2=#include "nxcon.h"
@@ -17,20 +17,20 @@ Class9=CMapView
 
 ResourceCount=95
 Resource1=IDD_THRESHOLD (English (U.S.))
-Resource2=IDD_LOGIN
+Resource2=IDA_ALARM_BROWSER
 Resource3=IDM_VIEW_SPECIFIC (English (U.S.))
-Resource4=IDD_NEW_USER
-Resource5=IDA_ACTION_EDITOR
+Resource4=IDD_LOGIN
+Resource5=IDD_USER_PROPERTIES
 Class2=CChildView
 Class5=CAboutDlg
 Class6=CControlPanel
 Class8=CMapFrame
 Class10=CLoginDialog
-Resource6=IDD_OBJECT_CAPS
+Resource6=IDD_EDIT_RULE_SEVERITY
 Class11=CProgressDialog
-Resource7=IDD_OBJECT_PRESENTATION
+Resource7=IDD_EDIT_TRAP
 Class12=CObjectBrowser
-Resource8=IDD_ACTION_PROPERTIES
+Resource8=IDD_SELECT_OBJECT
 Class13=CObjectPropDlg
 Resource9=IDD_CP_GENERAL (English (U.S.))
 Resource10=IDA_OBJECT_BROWSER (English (U.S.))
@@ -46,7 +46,7 @@ Resource17=IDD_SET_PASSWORD (English (U.S.))
 Class16=CDebugFrame
 Resource18=IDD_OBJECT_SECURITY (English (U.S.))
 Resource19=IDD_OBJECT_PROPERTIES (English (U.S.))
-Resource20=IDD_GROUP_PROPERTIES
+Resource20=IDD_OBJECT_NODE_GENERAL
 Class17=CObjectPreview
 Resource21=IDD_DCI_TRANSFORM (English (U.S.))
 Class18=CToolBox
@@ -59,32 +59,32 @@ Class23=CNodePropsGeneral
 Resource23=IDD_LOGIN (English (U.S.))
 Class24=CObjectPropCaps
 Class25=CObjectPropSheet
-Resource24=IDD_EDIT_TRAP_ARG
+Resource24=IDD_SELECT_ACTION
 Class26=CRequestProcessingDlg
 Resource25=IDD_EDIT_EVENT (English (U.S.))
 Resource26=IDD_PROGRESS (English (U.S.))
-Resource27=IDD_DCI_THRESHOLDS
+Resource27=IDD_OBJECT_GENERAL
 Resource28=IDD_USER_PROPERTIES (English (U.S.))
 Class27=CObjectPropsGeneral
 Resource29=IDA_ALARM_BROWSER (English (U.S.))
 Class28=CObjectPropsSecurity
 Resource30=IDD_CREATE_NODE (English (U.S.))
-Resource31=IDD_CREATE_CONTAINER
-Resource32=IDD_EDIT_RULE_COMMENT
+Resource31=IDA_GRAPH
+Resource32=IDD_CREATE_TEMPLATE
 Class29=CUserSelectDlg
-Resource33=IDD_MIB_BROWSER
+Resource33=IDD_SELECT_USER
 Class30=CUserEditor
 Resource34=IDD_DCI_PROPERTIES
 Class31=CNewUserDlg
-Resource35=IDD_DCI_COLLECTION
-Resource36=IDD_CREATE_TG
+Resource35=IDD_REQUEST_PROCESSING
+Resource36=IDD_EDIT_RULE_ALARM
 Class32=CUserPropDlg
 Resource37=IDM_CONTEXT (English (U.S.))
-Resource38=IDA_EPP
+Resource38=IDD_CREATE_TG
 Class33=CGroupPropDlg
-Resource39=IDD_THRESHOLD
-Resource40=IDD_USER_PROPERTIES
-Resource41=IDA_NETMAP
+Resource39=IDD_OBJECT_SECURITY
+Resource40=IDD_CREATE_CONTAINER
+Resource41=IDM_VIEW_SPECIFIC
 Resource42=IDD_SELECT_OBJECT (English (U.S.))
 Class34=CPasswordChangeDlg
 Class35=CNodeSummary
@@ -103,52 +103,52 @@ Resource47=IDD_OBJECT_CAPS (English (U.S.))
 Resource48=IDM_CONTEXT
 Class43=CThresholdDlg
 Resource49=IDD_SELECT_USER (English (U.S.))
-Resource50=IDA_EVENT_EDITOR
+Resource50=IDD_SET_PASSWORD
 Class44=CMIBBrowserDlg
 Class45=CEventPolicyEditor
 Class46=CRuleList
 Class47=CRuleHeader
 Resource51=IDR_MAINFRAME (English (U.S.))
-Resource52=IDD_SELECT_ACTION
+Resource52=IDD_EDIT_RULE_COMMENT
 Class48=CObjectSelDlg
-Resource53=IDA_ALARM_BROWSER
-Resource54=IDD_SET_PASSWORD
+Resource53=IDD_EDIT_TRAP_ARG
+Resource54=IDD_OBJECT_CAPS
 Class49=CRuleCommentDlg
-Resource55=IDD_REQUEST_PROCESSING
+Resource55=IDA_TRAP_EDITOR
 Class50=CEventSelDlg
-Resource56=IDD_OBJECT_NODE_GENERAL
+Resource56=IDD_MIB_BROWSER
 Resource57=IDD_REQUEST_PROCESSING (English (U.S.))
-Resource58=IDD_CREATE_NODE
+Resource58=IDD_OBJECT_PRESENTATION
 Resource59=IDD_ABOUTBOX (English (U.S.))
 Resource60=IDD_MIB_BROWSER (English (U.S.))
 Class51=CObjectPropsPresentation
 Resource61=IDD_OBJECT_PRESENTATION (English (U.S.))
-Resource62=IDR_MAINFRAME
+Resource62=IDD_EDIT_EVENT
 Class52=CRuleSeverityDlg
-Resource63=IDD_SELECT_OBJECT
+Resource63=IDD_NEW_USER
 Class53=CRuleAlarmDlg
 Class54=CAlarmBrowser
 Resource64=IDD_SELECT_EVENT (English (U.S.))
-Resource65=IDD_EDIT_RULE_SEVERITY
+Resource65=IDD_DCI_COLLECTION
 Resource66=IDD_NEW_ACTION (English (U.S.))
 Resource67=IDD_DCI_COLLECTION (English (U.S.))
 Resource68=IDD_NEW_USER (English (U.S.))
 Class55=CConsolePropsGeneral
 Class56=CActionEditor
-Resource69=IDM_VIEW_SPECIFIC
-Resource70=IDD_ABOUTBOX
+Resource69=IDD_DATA_QUERY
+Resource70=IDD_DCI_THRESHOLDS
 Class57=CNewActionDlg
-Resource71=IDA_OBJECT_BROWSER
+Resource71=IDD_DCI_TRANSFORM
 Class58=CEditActionDlg
-Resource72=IDD_DATA_QUERY
+Resource72=IDD_NEW_ACTION
 Class59=CActionSelDlg
-Resource73=IDD_SELECT_USER
+Resource73=IDD_ABOUTBOX
 Resource74=IDD_EDIT_RULE_COMMENT (English (U.S.))
 Resource75=IDD_EDIT_RULE_ALARM (English (U.S.))
-Resource76=IDD_EDIT_EVENT
+Resource76=IDA_NETMAP
 Class60=CCreateObjectDlg
 Class61=CCreateContainerDlg
-Resource77=IDD_OBJECT_GENERAL
+Resource77=IDD_SELECT_EVENT
 Class62=CCreateNodeDlg
 Resource78=IDA_EPP (English (U.S.))
 Resource79=IDD_CREATE_CONTAINER (English (U.S.))
@@ -158,27 +158,27 @@ Resource81=IDD_ACTION_PROPERTIES (English (U.S.))
 Class64=CPollNodeDlg
 Resource82=IDD_POLL_NODE (English (U.S.))
 Class65=CNodePoller
-Resource83=IDD_CREATE_TEMPLATE
-Resource84=IDA_MDI_DEFAULT
+Resource83=IDD_CP_GENERAL
+Resource84=IDD_CREATE_NODE
 Class66=CCreateTemplateDlg
 Class67=CCreateTGDlg
-Resource85=IDD_DCI_TRANSFORM
-Resource86=IDA_TRAP_EDITOR
+Resource85=IDA_ACTION_EDITOR
+Resource86=IDR_MAINFRAME
 Class68=CTrapEditor
-Resource87=IDD_EDIT_TRAP
-Resource88=IDA_GRAPH
-Resource89=IDD_OBJECT_SECURITY
+Resource87=IDD_ACTION_PROPERTIES
+Resource88=IDA_MDI_DEFAULT
+Resource89=IDA_PACKAGE_MGR
 Class69=CDataQueryDlg
-Resource90=IDD_SELECT_EVENT
+Resource90=IDD_GROUP_PROPERTIES
 Class70=CTrapEditDlg
-Resource91=IDA_PACKAGE_MGR
+Resource91=IDA_OBJECT_BROWSER
 Class71=CTrapParamDlg
-Resource92=IDD_EDIT_RULE_ALARM
-Resource93=IDD_CP_GENERAL
+Resource92=IDA_EPP
+Resource93=IDD_THRESHOLD
 Class72=CGraphPropDlg
 Class73=CColorSelector
 Class74=CPackageMgr
-Resource94=IDD_NEW_ACTION
+Resource94=IDA_EVENT_EDITOR
 Resource95=IDD_GRAPH_PROPERTIES
 
 [CLS:CConsoleApp]
@@ -691,7 +691,8 @@ Command89=ID_GRAPH_FREEZE
 Command90=ID_GRAPH_PROPERTIES
 Command91=ID_PACKAGE_INSTALL
 Command92=ID_PACKAGE_REMOVE
-CommandCount=92
+Command93=ID_PACKAGE_DEPLOY
+CommandCount=93
 
 [ACL:IDA_MDI_DEFAULT]
 Type=1
@@ -1158,7 +1159,7 @@ VirtualFilter=dWC
 [DLG:IDD_USER_PROPERTIES]
 Type=1
 Class=CUserPropDlg
-ControlCount=20
+ControlCount=22
 Control1=IDC_EDIT_LOGIN,edit,1350631552
 Control2=IDC_EDIT_NAME,edit,1350631552
 Control3=IDC_EDIT_DESCRIPTION,edit,1350631552
@@ -1179,11 +1180,13 @@ Control17=IDC_STATIC,static,1342308352
 Control18=IDC_STATIC,static,1342308352
 Control19=IDC_STATIC,button,1342177287
 Control20=IDC_STATIC,button,1342177287
+Control21=IDC_CHECK_MANAGE_PKG,button,1342242819
+Control22=IDC_CHECK_DELETE_ALARMS,button,1342242819
 
 [DLG:IDD_GROUP_PROPERTIES]
 Type=1
 Class=CGroupPropDlg
-ControlCount=21
+ControlCount=23
 Control1=IDC_EDIT_NAME,edit,1350631552
 Control2=IDC_EDIT_DESCRIPTION,edit,1350631552
 Control3=IDC_CHECK_DISABLED,button,1342242819
@@ -1205,6 +1208,8 @@ Control18=IDC_STATIC,static,1342308352
 Control19=IDC_STATIC,button,1342177287
 Control20=IDC_STATIC,button,1342177287
 Control21=IDC_STATIC,button,1342177287
+Control22=IDC_CHECK_MANAGE_PKG,button,1342242819
+Control23=IDC_CHECK_DELETE_ALARMS,button,1342242819
 
 [CLS:CGroupPropDlg]
 Type=0
@@ -1332,7 +1337,8 @@ Command85=ID_GRAPH_FREEZE
 Command86=ID_GRAPH_PROPERTIES
 Command87=ID_PACKAGE_INSTALL
 Command88=ID_PACKAGE_REMOVE
-CommandCount=88
+Command89=ID_PACKAGE_DEPLOY
+CommandCount=89
 
 [MNU:IDM_CONTEXT (English (U.S.))]
 Type=1
