@@ -376,6 +376,8 @@ BEGIN
     BEGIN
         MENUITEM "&Install...\tCtrl+I",         ID_PACKAGE_INSTALL
         MENUITEM "&Remove\tCtrl+R",             ID_PACKAGE_REMOVE
+        MENUITEM SEPARATOR
+        MENUITEM "&Deploy...\tCtrl+D",          ID_PACKAGE_DEPLOY
     END
 END
 
@@ -571,6 +573,8 @@ BEGIN
     BEGIN
         MENUITEM "&Install...",                 ID_PACKAGE_INSTALL
         MENUITEM "&Remove",                     ID_PACKAGE_REMOVE
+        MENUITEM SEPARATOR
+        MENUITEM "&Deploy...",                  ID_PACKAGE_DEPLOY
     END
 END
 
@@ -883,7 +887,7 @@ BEGIN
     LTEXT           "Login name",IDC_STATIC_HEADER,7,7,113,8
 END
 
-IDD_USER_PROPERTIES DIALOG DISCARDABLE  0, 0, 222, 189
+IDD_USER_PROPERTIES DIALOG DISCARDABLE  0, 0, 222, 201
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "User Properties"
 FONT 8, "MS Sans Serif"
@@ -912,16 +916,20 @@ BEGIN
                     BS_AUTOCHECKBOX | WS_TABSTOP,119,139,79,10
     CONTROL         "Manage &actions",IDC_CHECK_MANAGE_ACTIONS,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,119,150,86,10
-    DEFPUSHBUTTON   "OK",IDOK,110,168,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,165,168,50,14
+    DEFPUSHBUTTON   "OK",IDOK,110,180,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,165,180,50,14
     LTEXT           "Login name:",IDC_STATIC,7,10,40,8
     LTEXT           "Full name:",IDC_STATIC,7,29,33,8
     LTEXT           "Description:",IDC_STATIC,7,48,38,8
     GROUPBOX        "Flags",IDC_STATIC,7,63,208,38
-    GROUPBOX        "System Rights",IDC_STATIC,7,106,208,58
+    GROUPBOX        "System Rights",IDC_STATIC,7,106,208,70
+    CONTROL         "Manage agent packa&ges",IDC_CHECK_MANAGE_PKG,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,13,161,95,10
+    CONTROL         "Delete ala&rms",IDC_CHECK_DELETE_ALARMS,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,119,161,86,10
 END
 
-IDD_GROUP_PROPERTIES DIALOGEX 0, 0, 223, 258
+IDD_GROUP_PROPERTIES DIALOGEX 0, 0, 223, 266
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Group Properties"
 FONT 8, "MS Sans Serif"
@@ -931,34 +939,38 @@ BEGIN
     CONTROL         "&Group is disabled",IDC_CHECK_DISABLED,"Button",
                     BS_AUTOCHECKBOX | WS_TABSTOP,13,58,79,10
     CONTROL         "&Manage users",IDC_CHECK_MANAGE_USERS,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,13,91,61,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,13,90,61,10
     CONTROL         "Configure SNMP &traps",IDC_CHECK_SNMP_TRAPS,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,13,102,86,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,13,101,86,10
     CONTROL         "Manage server &configuration",IDC_CHECK_MANAGE_CONFIG,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,113,106,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,13,112,106,10
     CONTROL         "Manage event &policy",IDC_CHECK_MANAGE_EPP,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,13,124,82,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,13,123,82,10
     CONTROL         "D&rop client connections",IDC_CHECK_DROP_CONN,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,119,91,91,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,119,90,91,10
     CONTROL         "V&iew event database",IDC_CHECK_VIEW_EVENTDB,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,119,102,83,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,119,101,83,10
     CONTROL         "&Edit event database",IDC_CHECK_EDIT_EVENTDB,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,119,113,79,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,119,112,79,10
     CONTROL         "Manage &actions",IDC_CHECK_MANAGE_ACTIONS,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,119,124,67,10
+                    BS_AUTOCHECKBOX | WS_TABSTOP,119,123,67,10
     CONTROL         "List1",IDC_LIST_MEMBERS,"SysListView32",LVS_REPORT | 
                     LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_SORTASCENDING | 
                     LVS_NOCOLUMNHEADER | LVS_NOSORTHEADER | WS_TABSTOP,12,
-                    155,143,72,WS_EX_CLIENTEDGE
-    PUSHBUTTON      "&Add...",IDC_BUTTON_ADD,160,155,50,14
-    PUSHBUTTON      "&Delete",IDC_BUTTON_DELETE,160,174,50,14
-    DEFPUSHBUTTON   "OK",IDOK,110,237,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,165,237,50,14
+                    163,143,72,WS_EX_CLIENTEDGE
+    PUSHBUTTON      "&Add...",IDC_BUTTON_ADD,160,163,50,14
+    PUSHBUTTON      "&Delete",IDC_BUTTON_DELETE,160,182,50,14
+    DEFPUSHBUTTON   "OK",IDOK,110,245,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,165,245,50,14
     LTEXT           "Name:",IDC_STATIC,7,10,22,8
     LTEXT           "Description:",IDC_STATIC,7,30,38,8
-    GROUPBOX        "System Rights",IDC_STATIC,7,79,208,61
+    GROUPBOX        "System Rights",IDC_STATIC,7,79,208,71
     GROUPBOX        "Flags",IDC_STATIC,7,46,208,27
-    GROUPBOX        "Members",IDC_STATIC,7,145,208,86
+    GROUPBOX        "Members",IDC_STATIC,7,153,208,86
+    CONTROL         "Manage agent packa&ges",IDC_CHECK_MANAGE_PKG,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,13,135,95,10
+    CONTROL         "Delete ala&rms",IDC_CHECK_DELETE_ALARMS,"Button",
+                    BS_AUTOCHECKBOX | WS_TABSTOP,119,135,86,10
 END
 
 IDD_SET_PASSWORD DIALOGEX 0, 0, 251, 63
@@ -1622,7 +1634,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 215
         TOPMARGIN, 7
-        BOTTOMMARGIN, 182
+        BOTTOMMARGIN, 194
     END
 
     IDD_GROUP_PROPERTIES, DIALOG
@@ -1630,7 +1642,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 215
         TOPMARGIN, 7
-        BOTTOMMARGIN, 251
+        BOTTOMMARGIN, 259
     END
 
     IDD_SET_PASSWORD, DIALOG
